// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TgDtoGenerator Snapshot Tests should snapshot complete DTO generation workflow output 1`] = `
[
  {
    "callIndex": 0,
    "content": "/* AUTO-GENERATED */
import { ApiProperty } from '@nestjs/swagger';

export class UserResponseDto {
  @ApiProperty({"name":"id"})
  id: string;
}
",
    "filePath": "src\\dtos\\generated\\user-response.dto.ts",
  },
  {
    "callIndex": 1,
    "content": "/* AUTO-GENERATED */
export * from './user-response.dto';",
    "filePath": "src\\dtos\\generated\\index.ts",
  },
]
`;

exports[`TgDtoGenerator Snapshot Tests should snapshot complete generation process with all field types 1`] = `
"/* AUTO-GENERATED */
import { ApiProperty } from '@nestjs/swagger';

export class UserResponseDto {
  @ApiProperty({"name":"id"})
  id: string;
}
"
`;

exports[`TgDtoGenerator Snapshot Tests should snapshot complete generation workflow output 1`] = `
{
  "consoleLogs": [
    "🚀 Starting DTO generation...",
    "📁 Setting up output directory...",
    "📖 Parsing Prisma schema...",
    "📋 Found model: User",
    "📊 Found 1 models in schema",
    "📝 Generating DTO files...",
    "✅ Generated user-response.dto.ts",
    "📄 Generating index file...",
    "✅ Generated index.ts",
    "🎨 Formatting generated files...",
    "✅ DTO generation completed successfully!",
  ],
  "dtoFilesGenerated": 1,
  "filePaths": [
    "src\\dtos\\generated\\user-response.dto.ts",
    "src\\dtos\\generated\\index.ts",
  ],
  "formatGeneratedFileCalls": 2,
  "parseSchemaCalls": 1,
  "tagAutoGeneratedCalls": 2,
  "writeFileSyncCalls": 2,
}
`;

exports[`TgDtoGenerator Snapshot Tests should snapshot file generation with mixed case model names 1`] = `
[
  "src\\dtos\\generated\\user-response.dto.ts",
]
`;

exports[`TgDtoGenerator Snapshot Tests should snapshot file generation with mixed case model names 2`] = `
"/* AUTO-GENERATED */
export * from './user-response.dto';"
`;

exports[`TgDtoGenerator Snapshot Tests should snapshot generated index file structure 1`] = `
"/* AUTO-GENERATED */
export * from './user-response.dto';"
`;
